--- a/rules/acm.yaml
+++ b/rules/acm.yaml
@@ -12,19 +12,20 @@ spec:
     rules:
     - alert: AwsCloudwatchAcmCertificateExpirationWarning
       annotations:
-        summary: ACM certificate will expire in less than 30 days
+        summary: ACM certificate will expire in less than 14 days
         description: ACM certificate will expire in {{$value}} days for arn {{ $labels.dimension_CertificateArn }} in customer {{ $labels.overwrite_asy_customer }} account {{ $labels.overwrite_aws_account_id }} region {{ $labels.overwrite_aws_region }}
         runbook_url: https://docs.aws.amazon.com/acm/latest/userguide/troubleshooting-renewal.html
-      expr: aws_cloudwatch_CertificateManager_DaysToExpiry_CertificateArn{acm_in_use!="0"} < 30
+      expr: aws_cloudwatch_CertificateManager_DaysToExpiry_CertificateArn{acm_in_use!="0"} < 14
       for: 30m
       labels:
         severity: warning
     - alert: AwsCloudwatchAcmCertificateExpirationCritical
       annotations:
-        summary: ACM certificate will expire in less than 10 days
+        summary: ACM certificate will expire in less than 4 days
         description: ACM certificate will expire in {{$value}} days for arn {{ $labels.dimension_CertificateArn }} in customer {{ $labels.overwrite_asy_customer }} account {{ $labels.overwrite_aws_account_id }} region {{ $labels.overwrite_aws_region }}
         runbook_url: https://docs.aws.amazon.com/acm/latest/userguide/troubleshooting-renewal.html
-      expr: aws_cloudwatch_CertificateManager_DaysToExpiry_CertificateArn{acm_in_use!="0"} < 10
+      expr: aws_cloudwatch_CertificateManager_DaysToExpiry_CertificateArn{acm_in_use!="0"} < 4
       for: 15m
       labels:
         severity: critical
+        is_critical: true
