--- a/.github/workflows/check-rules.yaml
+++ b/.github/workflows/check-rules.yaml
@@ -16,10 +16,10 @@ jobs:
       - run: echo "🖥️ The workflow is now ready to test your code on the runner."
       - name: Install software
         run: |
-          apt-get update
-          apt-get install wget
-          wget -qO /usr/local/bin/yq https://github.com/mikefarah/yq/releases/latest/download/yq_linux_amd64
-          chmod 755 /usr/local/bin/yq
+          sudo apt-get update
+          sudo apt-get install wget
+          sudo wget -qO /usr/local/bin/yq https://github.com/mikefarah/yq/releases/latest/download/yq_linux_amd64
+          sudo chmod 755 /usr/local/bin/yq
       - name: List files in the repository
         run: |
           ls ${{ github.workspace }}
