--- a/.github/workflows/check-rules.yaml
+++ b/.github/workflows/check-rules.yaml
@@ -25,7 +25,7 @@ jobs:
           ls ${{ github.workspace }}
       - name: Convert files in the repository
         run: |
-          mkdir /tmp/test
-          find ${{ github.workspace }}  -name "*.yaml"  | awk '{ print "cat " $1 " | yq .spec > /tmp/test/"$1 }' | sh
-          ls -la /tmp/test
+          mkdir test
+          find ${{ github.workspace }}/rules -name "*.yaml"  | awk '{ print "cat " $1 " | yq .spec > test/"$1 }' | sh
+          ls -la test
       - run: echo "🍏 This job's status is ${{ job.status }}."
