--- a/.github/workflows/check-rules.yaml
+++ b/.github/workflows/check-rules.yaml
@@ -20,6 +20,9 @@ jobs:
           sudo apt-get install wget
           sudo wget -qO /usr/local/bin/yq https://github.com/mikefarah/yq/releases/latest/download/yq_linux_amd64
           sudo chmod 755 /usr/local/bin/yq
+          wget https://github.com/prometheus/prometheus/releases/download/v2.36.2/prometheus-2.36.2.linux-amd64.tar.gz
+          tar -xvzf prometheus-2.36.2.linux-amd64.tar.gz
+          sudo mv prometheus-2.36.2.linux-amd64/promtool /usr/local/bin/promtool
       - name: List files in the repository
         run: |
           ls ${{ github.workspace }}
@@ -29,4 +32,13 @@ jobs:
           mkdir -p test/rules
           find rules -name "*.yaml"  | awk '{ print "cat " $1 " | yq .spec > test/"$1 }' | sh
           ls -la test/rules
+      - name: Check files in the repository
+        run: |
+          cd ${{ github.workspace }}/test
+          mkdir -p test/rules
+          find . -name "*.yaml" | awk '{print "promtool check rules " $1 }' | sh
       - run: echo "🍏 This job's status is ${{ job.status }}."
+
+
+
+#https://github.com/prometheus/prometheus/releases/download/v2.36.2/prometheus-2.36.2.linux-amd64.tar.gz
