--- a/.github/workflows/check-rules.yaml
+++ b/.github/workflows/check-rules.yaml
@@ -4,7 +4,7 @@
 name: Check Prometheus rules
 on: [push]
 jobs:
-  extract-rules:
+  check-rules:
     runs-on: ubuntu-latest
     steps:
       - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
@@ -35,10 +35,5 @@ jobs:
       - name: Check files in the repository
         run: |
           cd ${{ github.workspace }}/test
-          mkdir -p test/rules
-          find . -name "*.yaml" | awk '{print "promtool check rules " $1 }' | sh
+          find . -name "*.yaml" -type f -exec promtool check rules {} \;
       - run: echo "🍏 This job's status is ${{ job.status }}."
-
-
-
-#https://github.com/prometheus/prometheus/releases/download/v2.36.2/prometheus-2.36.2.linux-amd64.tar.gz
