--- a/.github/workflows/check-rules.yaml
+++ b/.github/workflows/check-rules.yaml
@@ -1,6 +1,3 @@
-
-
-
 name: Check Prometheus rules
 on: [push]
 jobs:
@@ -17,7 +14,7 @@ jobs:
       - name: Install software
         run: |
           sudo apt-get update
-          sudo apt-get install wget
+          sudo apt-get install wget yamllint
           sudo wget -qO /usr/local/bin/yq https://github.com/mikefarah/yq/releases/latest/download/yq_linux_amd64
           sudo chmod 755 /usr/local/bin/yq
           wget -q https://github.com/prometheus/prometheus/releases/download/v2.36.2/prometheus-2.36.2.linux-amd64.tar.gz
@@ -26,13 +23,17 @@ jobs:
       - name: List files in the repository
         run: |
           ls ${{ github.workspace }}
-      - name: Convert files in the repository
+      - name: Check files using yamllint
+        run: |
+          cd ${{ github.workspace }}
+          yamllint rules/*.yaml
+      - name: Convert files for promtool
         run: |
           cd ${{ github.workspace }}
           mkdir -p test/rules
           find rules -name "*.yaml"  | awk '{ print "cat " $1 " | yq .spec > test/"$1 }' | sh
           ls -la test/rules
-      - name: Check files in the repository
+      - name: Check files using promtool
         run: |
           cd ${{ github.workspace }}/test
           find . -name "*.yaml" -type f -exec promtool check rules {} \;
