--- a/.github/workflows/check-rules.yaml
+++ b/.github/workflows/check-rules.yaml
@@ -20,6 +20,8 @@ jobs:
           wget -q https://github.com/prometheus/prometheus/releases/download/v2.36.2/prometheus-2.36.2.linux-amd64.tar.gz
           tar -xzf prometheus-2.36.2.linux-amd64.tar.gz
           sudo mv prometheus-2.36.2.linux-amd64/promtool /usr/local/bin/promtool
+          rm -fr prometheus-2.36.2.linux-amd64.tar.gz
+          rm -fr prometheus-2.36.2.linux-amd64
       - name: List files in the repository
         run: |
           ls ${{ github.workspace }}
