--- a/rules/cloudwatch.yaml
+++ b/rules/cloudwatch.yaml
@@ -18,7 +18,8 @@ spec:
           expr: absent(aws_cloudwatch_CloudWatch_MetricUpdate_sum)
           for: 15m
           labels:
-            severity: warning
+            severity: critical
+            asy_itsm_severity: high
         - alert: AwsCloudwatchMetricUpdateRateLow
           annotations:
             summary: Cloudwatch Metric Streams rate low
@@ -27,4 +28,5 @@ spec:
           expr: sum by (overwrite_asy_customer,overwrite_aws_account_id,overwrite_aws_region) (rate(aws_cloudwatch_CloudWatch_MetricUpdate_sum[15m])) < 0.01
           for: 30m
           labels:
-            severity: warning
+            severity: critical
+            asy_itsm_severity: high
