--- a/rules/patching.yaml
+++ b/rules/patching.yaml
@@ -10,7 +10,7 @@ spec:
   groups:
   - name: patching.rules
     rules:
-    - alert: PatchingMajor
+    - alert: AwsPatchingMajor
       annotations:
         message: {{ $labels.service_type }}/{{ $labels.resource_name }} in {{ $labels.overwrite_aws_account_id }}/{{ $labels.overwrite_aws_region }} has a major upgrade from {{ $labels.old_version }} to {{ $labels.new_version }}
       expr: |
@@ -18,7 +18,7 @@ spec:
       for: 5m
       labels:
         severity: critical
-    - alert: PatchingService
+    - alert: AwsPatchingService
       annotations:
         message: {{ $labels.service_type }}/{{ $labels.resource_name }} in {{ $labels.overwrite_aws_account_id }}/{{ $labels.overwrite_aws_region }} has an available service software update
       expr: |
@@ -26,7 +26,7 @@ spec:
       for: 5m
       labels:
         severity: critical
-    - alert: PatchingMinor
+    - alert: AwsPatchingMinor
       annotations:
         message: {{ $labels.service_type }}/{{ $labels.resource_name }} in {{ $labels.overwrite_aws_account_id }}/{{ $labels.overwrite_aws_region }} has a minor upgrade from {{ $labels.old_version }} to {{ $labels.new_version }}
       expr: |
