--- a/rules/elasticsearch.yaml
+++ b/rules/elasticsearch.yaml
@@ -39,6 +39,16 @@ spec:
           for: 15m
           labels:
             severity: critical
+        - alert: AwsCloudwatchElasticSearchMasterNotReachable
+          annotations:
+            summary: ElasticSearch Cluster master node is not reachable
+            description: ElasticSearch Cluster master node is not reachable for domain {{ $labels.dimension_DomainName }} in customer {{ $labels.overwrite_asy_customer }} account {{ $labels.overwrite_aws_account_id }} region {{ $labels.overwrite_aws_region }}
+            runbook_url: https://docs.aws.amazon.com/opensearch-service/latest/developerguide/handling-errors.html
+          expr: aws_cloudwatch_ES_MasterReachableFromNode_ClientId_DomainName == 0
+          for: 15m
+          labels:
+            severity: critical
+            asy_itsm_severity: high
         - alert: AwsCloudwatchElasticSearchHealthUnassignedShards
           annotations:
             summary: ElasticSearch Cluster has unassigned shards
