--- a/rules/nlb.yaml
+++ b/rules/nlb.yaml
@@ -19,6 +19,7 @@ spec:
           for: 15m
           labels:
             severity: critical
+            asy_itsm_severity: high
         - alert: AwsCloudwatchNlbTargetGroupZeroHealthyHosts
           annotations:
             summary: NLB TargetGroup number of healthy hosts is 0
