--- a/rules/asg.yaml
+++ b/rules/asg.yaml
@@ -38,3 +38,4 @@ spec:
           for: 30m
           labels:
             severity: critical
+# TODO: lambda sensu saas check too many terminated instances after each other?
