--- a/rules/efs.yaml
+++ b/rules/efs.yaml
@@ -18,7 +18,8 @@ spec:
           expr: round(aws_cloudwatch_EFS_BurstCreditBalance_FileSystemId) < 100
           for: 15m
           labels:
-            severity: warning
+            severity: critical
+            asy_itsm_severity: high
         - alert: AwsCloudwatchEFSBurstCreditBalancePrediction
           annotations:
             summary: EFS burst credit balance will be below 10 in 2 hours
