--- a/rules/patching.yaml
+++ b/rules/patching.yaml
@@ -12,7 +12,7 @@ spec:
       rules:
         - alert: AwsPatchingMajor
           annotations:
-            message: {{$labels.service_type}}/{{ $labels.resource_name }} in {{ $labels.overwrite_aws_account_id }}/{{ $labels.overwrite_aws_region }} has a major upgrade from {{ $labels.old_version }} to {{ $labels.new_version }}
+            message: {{$labels.service_type}}_{{ $labels.resource_name }} in {{ $labels.overwrite_aws_account_id }}_{{ $labels.overwrite_aws_region }} has a major upgrade from {{ $labels.old_version }} to {{ $labels.new_version }}
           expr: |
             aws_patching_MajorUpdate > 0
           for: 5m
@@ -20,7 +20,7 @@ spec:
             severity: critical
         - alert: AwsPatchingService
           annotations:
-            message: {{$labels.service_type}}/{{ $labels.resource_name }} in {{ $labels.overwrite_aws_account_id }}/{{ $labels.overwrite_aws_region }} has an available service software update
+            message: {{$labels.service_type}}_{{ $labels.resource_name }} in {{ $labels.overwrite_aws_account_id }}_{{ $labels.overwrite_aws_region }} has an available service software update
           expr: |
             aws_patching_ServiceSoftwareUpdate > 0
           for: 5m
@@ -28,7 +28,7 @@ spec:
             severity: critical
         - alert: AwsPatchingMinor
           annotations:
-            message: {{$labels.service_type}}/{{ $labels.resource_name }} in {{ $labels.overwrite_aws_account_id }}/{{ $labels.overwrite_aws_region }} has a minor upgrade from {{ $labels.old_version }} to {{ $labels.new_version }}
+            message: {{$labels.service_type}}_{{ $labels.resource_name }} in {{ $labels.overwrite_aws_account_id }}_{{ $labels.overwrite_aws_region }} has a minor upgrade from {{ $labels.old_version }} to {{ $labels.new_version }}
           expr: |
             aws_patching_MinorUpdate > 0
           for: 5m
